--- a/_slides/index.html
+++ b/_slides/index.html
@@ -77,20 +77,21 @@
           data-separator-notes="Note:"
         ></section>
         <section
-          data-markdown="./6 Cloud Hosting/01-intro.md"
+          data-markdown="./6 CLI/01-intro.md"
           data-separator-vertical="^---$"
           data-separator-notes="Note:"
         ></section>
         <section
-          data-markdown="./7 App Distribution/01-intro.md"
+          data-markdown="./7 Cloud Hosting/01-intro.md"
           data-separator-vertical="^---$"
           data-separator-notes="Note:"
         ></section>
         <section
-          data-markdown="./8 CLI/01-intro.md"
+          data-markdown="./8 App Distribution/01-intro.md"
           data-separator-vertical="^---$"
           data-separator-notes="Note:"
         ></section>
+
         <section
           data-markdown="./9 Emulators/01-intro.md"
           data-separator-vertical="^---$"
@@ -108,6 +109,11 @@
         ></section>
         <section
           data-markdown="./12 Security/01-intro.md"
+          data-separator-vertical="^---$"
+          data-separator-notes="Note:"
+        ></section>
+        <section
+          data-markdown="./13 Firebase Extensions/01-intro.md"
           data-separator-vertical="^---$"
           data-separator-notes="Note:"
         ></section>
