added chapter 9, 10, 11, 12, 13 and polished demo app

--- a/_slides/index.html
+++ b/_slides/index.html
@@ -91,29 +91,28 @@
           data-separator-vertical="^---$"
           data-separator-notes="Note:"
         ></section>
-
         <section
-          data-markdown="./9 Emulators/01-intro.md"
+          data-markdown="./9 Google Cloud/01-intro.md"
           data-separator-vertical="^---$"
           data-separator-notes="Note:"
         ></section>
         <section
-          data-markdown="./10 Google Cloud/01-intro.md"
+          data-markdown="./10 Cloud Functions/01-intro.md"
           data-separator-vertical="^---$"
           data-separator-notes="Note:"
         ></section>
         <section
-          data-markdown="./11 Cloud Functions/01-intro.md"
+          data-markdown="./11 Security/01-intro.md"
           data-separator-vertical="^---$"
           data-separator-notes="Note:"
         ></section>
         <section
-          data-markdown="./12 Security/01-intro.md"
+          data-markdown="./12 Extensions/01-intro.md"
           data-separator-vertical="^---$"
           data-separator-notes="Note:"
         ></section>
         <section
-          data-markdown="./13 Firebase Extensions/01-intro.md"
+          data-markdown="./13 Wrap/01-intro.md"
           data-separator-vertical="^---$"
           data-separator-notes="Note:"
         ></section>
