--- a/firebase_training_app/web/index.html
+++ b/firebase_training_app/web/index.html
@@ -42,6 +42,7 @@
     <script>
       var firebaseConfig = {
         apiKey: "AIzaSyCqqxqjyIcbsIof3S-GDCP6TpwLJZOq2qs",
+        databaseURL: "https://fir-training-b5da5-default-rtdb.europe-west1.firebasedatabase.app",
         authDomain: "fir-training-b5da5.firebaseapp.com",
         projectId: "fir-training-b5da5",
         storageBucket: "fir-training-b5da5.appspot.com",
